app/globals.css
@import "tailwindcss";
@import "tw-animate-css";
@import "./theme.css";

@import "uploadthing/tw/v4";
/* @source "../node_modules/@uploadthing/react/dist" */

@plugin "@tailwindcss/typography";

@custom-variant dark (&:is(.dark *));

@layer base {
  * {
    @apply transition-colors duration-200 ease-in outline-ring/50;
  }

  ::selection {
    @apply bg-primary/25;
  }

  html {
    @apply bg-background;
    @apply scroll-pt-24 scroll-smooth scrollbar-2;
  }

  body {
    @apply bg-background text-foreground overflow-x-hidden;
  }

  h1,
  h2,
  h3 {
    @apply font-bold text-pretty;
  }

  h4,
  h5,
  h6 {
    @apply font-semibold text-pretty;
  }

  h1 {
    @apply leading-[1.2];

    font-size: clamp(2.25rem, calc(1.75rem + 2.5vw), 3.5rem);
  }

  h2 {
    @apply leading-[1.25];

    font-size: clamp(2rem, calc(1.5rem + 2vw), 3rem);
  }

  h3 {
    @apply leading-[1.3];

    font-size: clamp(1.75rem, calc(1.25rem + 1.5vw), 2.75rem);
  }

  h4 {
    @apply leading-[1.35];

    font-size: clamp(1.5rem, calc(1rem + 1vw), 2.25rem);
  }

  h5 {
    @apply leading-[1.4];

    font-size: clamp(1.25rem, calc(0.75rem + 1vw), 1.75rem);
  }

  h6 {
    @apply leading-[1.45];

    font-size: clamp(1.125rem, calc(0.875rem + 0.75vw), 1.5rem);
  }

  h1 + p,
  h2 + p,
  h3 + p,
  h4 + p {
    @apply mt-1;
  }

  section p {
    @apply max-w-prose text-left text-pretty;
  }

  section p:has(+ p) {
    @apply mb-3;
  }

  section + section {
    @apply mt-6;
  }

  a {
    @apply text-primary hover:text-primary/90;
    @apply underline-offset-3 hover:underline;
    @apply decoration-current hover:decoration-1;
    @apply focus-visible:outline-none focus-visible:ring-current;
    @apply focus-visible:ring-2 focus-visible:ring-offset-2;
    @apply rounded-[1px];
  }

  section ul {
    @apply list-disc ml-6 pt-1 pb-3;
  }

  button,
  [role="button"],
  [data-slot="button"],
  [data-slot="select-item"] {
    @apply cursor-pointer rounded-sm;
  }

  input[type="number"]::-webkit-outer-spin-button,
  input[type="number"]::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }

  input[type="number"] {
    -moz-appearance: textfield;
  }

  input[type="number"] {
    appearance: none;
  }

  textarea {
    @apply scrollbar-1.5;
  }
}

